tdf#107033 DOCX import: fix unexpected missing footnote separator

Regression from commit 330b860205c7ba69dd6603f65324d0f89ad9cd5f
(fdo#68787 DOCX import: handle when w:separator is missing for
footnotes, 2013-09-04), the problem was footnote settings were modified
also in case there were no footnotes at all in the document.

Make the bug scenario and the original one working at the same time by
touching footnote settings only in case there is at least one footnote
in the current section.

Change-Id: I163d11769cbd97957662607fbedfba404181e002